# csgo_gc

./: .clang-format  .gitignore  CMakeLists.txt  HOW TO GIVE ITEMS.md  LICENSE  README.md  itemsguide.md
.github/workflows/: build.yml
csgo_gc/: CMakeLists.txt  appid.cpp  appid.h  case_opening.cpp  case_opening.h  config.cpp  config.h  gc_client.cpp  gc_client.h  gc_const.h  gc_const_csgo.h  gc_message.cpp  gc_message.h  gc_server.cpp  gc_server.h  gc_shared.cpp  gc_shared.h  graffiti.cpp  graffiti.h  inventory.cpp  inventory.h  item_schema.cpp  item_schema.h  keyvalue.cpp  keyvalue.h  main.cpp  networking_client.cpp  networking_client.h  networking_server.cpp  networking_server.h  networking_shared.h  platform.h  platform_unix.cpp  platform_windows.cpp  random.cpp  random.h  stdafx.h  steam_hook.cpp  steam_hook.h
examples/: appid_override.txt  config.txt  inventory.txt  passes.txt  price_sheet.txt  unusual_loot_lists.txt
launcher/: CMakeLists.txt  launcher.rc  launcher_unix.cpp  launcher_win.cpp
protobufs/: base_gcmessages.pb.cc  base_gcmessages.pb.h  base_gcmessages.proto  cstrike15_gcmessages.pb.cc  cstrike15_gcmessages.pb.h  cstrike15_gcmessages.proto  econ_gcmessages.pb.cc  econ_gcmessages.pb.h  econ_gcmessages.proto  engine_gcmessages.pb.cc  engine_gcmessages.pb.h  engine_gcmessages.proto  gcsdk_gcmessages.pb.cc  gcsdk_gcmessages.pb.h  gcsdk_gcmessages.proto  gcsystemmsgs.pb.cc  gcsystemmsgs.pb.h  gcsystemmsgs.proto  steammessages.pb.cc  steammessages.pb.h  steammessages.proto
steamworks/: CMakeLists.txt
